tests/diagnostics/packages/import_usage/imported_function_aliased_return_type_mismatch/expect.txt
# exit: 1
lib.coppice:8:16: error: return type mismatch: expected string, got int64
      return idOf(makeToken())
                 ^
